[tool.poetry]
name = "preloop-execution-engine"

version = "0.1.46"

description = "Core functionality for the execution engine."
authors = ["Tejas Hosangadi <tejas@preloop.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.2"
pandas = "^2.1.4"
sqlalchemy = "^2.0.23"
scikit-learn = "^1.3.2"
sqlparse = "^0.4.4"
psycopg2 = "^2.9.9"
xgboost = "^2.0.3"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
requests = "^2.31.0"
pylint = "^3.1.0"
pydantic = "^2.6.3"
simplejson = "^3.19.2"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
black = "22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude='''
^/src/alembic/versions/*\.py
'''
line-length=120


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
profile = "black"
extend_skip = ".pyenv"
src_paths = [""]
known_first_party = ["execution-engine"]